# scan-registration-app

./: .gitignore  CMakeLists.txt  README.md
include/: mainwindow.h  mainwindow.ui
src/: main.cpp  mainwindow.cpp
